fixing code for UV Index to shift colors

--- a/style.css
+++ b/style.css
@@ -18,3 +18,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+#uv-index {
+    text-align: left;
+}
